--- a/gb/ncid280_2.md
+++ b/gb/ncid280_2.md
@@ -1,5 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>天灾人祸</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766765.md#1" target="_blank">【拍案惊奇】舌尖上的瘟疫 武汉肺炎与野味</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766765.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6905677394b9b_ttl7dayXor_tn0103-xxx-150x120.jpg" align ="left"></a>2020注定不平凡，新年刚一开始，就发生了好多事件。比如美军无人机空袭巴格达机场，杀死了伊朗革命卫队指挥官苏莱曼尼；台湾黑鹰直升机坠落，造成参谋总长沈一鸣上将等8个人遇难，等等。但是对华人朋友来说，最容易引发恐慌的，则是在武汉爆发的“病毒性肺炎”。通过这个案例，我们会引申谈到两点问题，一是来谈为什么说“野味”可能成为“灰犀牛事件”，第二是在武汉与香港不完全相.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 12:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766872.md#1" target="_blank">武汉肺炎疫情扩大 大陆多地又爆发流感</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/VCG111184914335-600x400-150x120.jpg" align ="left"></a>随着武汉爆发不明肺炎疫情、扬州大学出现肺结核疫情及兰州布鲁氏菌病例增加，进入2020年，大陆多个城市亦爆发流感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 11:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11766320.md#1" target="_blank">武汉萨斯疑云扩大 专家质疑当局隐瞒疫情</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11766320.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-144530355-150x120.jpg" align ="left"></a>武汉2019年12月31日爆出不明肺炎疫情，短短几天内暴增至44例。且截止目前香港已接受5宗从武汉回港的相关病例个案，5人均表示未到过华南海鲜市场。然而当局至今仍未公布病原及感染途径，专家质疑当局隐瞒疫情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11766254.md#1" target="_blank">【新闻看点】武汉肺炎是SARS？官抓人 民恐慌</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11766254.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20191231PHO0181l-150x120.jpg" align ="left"></a>武汉爆发不明肺炎，民众恐慌，但是中共官方一直没有公布确切病源，与此同时，8个转发信息的网民却被警方以散布谣言带走。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:53 AM							</td></tr>
@@ -24,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11759388.md#1" target="_blank">新年前一天松原现3个“太阳” 网民热议</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11759388.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/d--150x120.jpeg" align ="left"></a>新年前一天，即2019年12月31日，吉林省松原市扶余市的天上出现奇异天象，天空中现3个太阳。有人直呼“活了30年头一次见”，此事亦在微博上引发热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11758900.md#1" target="_blank">山东偷排污水管深埋入海口 污染令人震惊</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11758900.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/325ce0f93814dea0342ffc85f4b78a00-150x120.jpg" align ="left"></a>近日，有大陆网民拍摄视频，披露山东省龙口市的排污管道深埋于入海口处偷排污水，污染状况令人震惊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11756631.md#1" target="_blank">传武汉爆发SARS疫情 7例病情危重</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11756631.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IANTnpj-150x120.jpg" align ="left"></a>湖北武汉市最近公布一则紧急通告，称在当地的海鲜市场陆续出现“不明原因的肺炎”。微博上疯传，武汉疑似爆发非典型肺炎冠状病毒（SARS）群聚感染，已经有7宗感染病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 6:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767498.md#1" target="_blank">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br></h3>湖北武汉市不明原因肺炎（外界怀疑SARS疫情）风波在当局的封锁隐瞒下，内地一片“风平浪静”，香港则已启动严重应变级别，香港专家称有充分理由相信当地已发生怀疑人传人情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:49 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11752375.md#1" target="_blank">大陆干旱持续数月 江西近33万人饮水困难</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11752375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg" align ="left"></a>数月以来，中国大陆多省持续严重干旱情况。当前，江西南昌市饮用水水源地“幸福水库”的河床裸露干裂。全省有近33万人饮水困难。赣江南昌段近日将出现更低的水位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11766515.md#1" target="_blank">传武汉已掌握新病毒 港府急应变拟升级防疫</a><br></h3>武汉爆发不明原因肺炎已经有病患44例，但当局至今仍未公布致病的病毒种类。香港《苹果日报》独家获悉，当地已掌握导致这次不明肺炎爆发的病毒。香港政府已拟定了进一步加强防疫的措施，最快4日公布。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11764905.md#1" target="_blank">新年第三天 哈尔滨一公交车辗压死一男子</a><br></h3>1月3日，哈尔滨市一辆公交车将一名男子撞倒辗压。该男子当场死亡。
 
@@ -39,5 +38,6 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11756555.md#1" target="_blank">山西一在建隧道坍塌 5人死亡1人被困</a><br></h3>12月30日，山西晋城市一施工隧道发生断面塌方，塌方量约200立方米。有6人被困，截止今（31日）早9时11分，证实有5人死亡，1人受困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754339.md#1" target="_blank">重庆涪陵一居民楼着火 6人死亡</a><br></h3>2019年12月30日早上，重庆市涪陵区一居民楼着火，导致6人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 2:02 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754205.md#1" target="_blank">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br></h3>12月29日下午，辽宁省沈阳市发生一起交通事故，一辆大巴车与限高杆相撞，导致车顶脱落，波及旁边的小轿车，致小轿车内一人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 1:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11753030.md#1" target="_blank">山西国企煤矿集团子公司发生事故 5死1伤</a><br></h3>12月30日，山西同煤集团官网、党委宣传部消息，12月29日凌晨零时，同煤集团地煤公司焦煤矿305煤眼，发生一起流煤眼歘煤事故。事发时6人被困，经救援，5人抢救无效死亡，1人送医后生命体征平稳。事故原因仍在调查中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/lduuv275/djy/blob/master/gb/ncid280_2.md#1<br><a href="https://github.com/lduuv275/djy/blob/master/gb/ncid280_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lduuv275/djy/blob/master/gb/ncid280_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_2.htm">http://www.epochtimes.com/gb/ncid280_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
