--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -30,7 +30,7 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/5/n11569920.md#1" target="_blank">易蓉：退党大潮为中华民族带来新生曙光</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/5/n11569920.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1907181621001973-150x120.jpg" align ="left"></a>2019年10月1日是十一国殇日70周年，全球退出中共服务中心主席易蓉，在法轮功反迫害20周年香港集会上录音发言表示，有三亿四千多万中国民众已选择唾弃中共，也标志着退党大潮正在为中华民族带来新生的曙光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 5:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/1/n11559279.md#1" target="_blank">中共窃政70年 中华儿女声明退党团少先队</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/1/n11559279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/130518194335815-150x120.jpg" align ="left"></a>中共建政70周年之际，许多大陆民众看清了中共的真面目，不希望与中共捆绑、为伍作恶，纷纷在大纪元退党网站上声明退出中国共产党、团、少先队。该网站自2004年12月开通以来，已经累积了3亿4千多万人声明退出中共一切组织。一位不具名的红二代向大纪元表示，近期香港事件让人看出中共邪恶本质，是退党的催化剂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 2:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank">马国民众声援三退大潮 谴责中共在港暴行</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/01-20190929-Mal-TD-IMG_2141-R-150x120.jpg" align ="left"></a>在刚过的周末（9月29日）下午，马来西亚退党服务中心义工们来到了首都吉隆坡市中心，在人山人海的武吉免登区（Bukit Bintang）举行集会，和民众一起声援3亿4千2百万退出共产党、共青团和少先队的“三退”勇士们；同时抗议中共黑手暴力攻击香港法轮功学员，制造流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月02日 10:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/30/n11621413.md#1" target="_blank">每日三退声明精选（2019/10/29）</a><br></h3>共产党确实坏，它不仅破坏中国文化摧毁中华文明，不断的制造各种政治运动，使中国人苦难深重，现在又千方百计的欺诈老百姓，用老百姓的钱粉饰大好形势，对善良法轮功残酷迫害，这都是邪恶党的本性决定的，现在我申明退出党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 12:15 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank">中共篡政70年 凌晓辉：从反送中看到希望</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201150518552519-150x120.jpg" align ="left"></a>为了“国庆70周年”，本应与国同庆的人民却被控制，除了商场不能卖菜刀外，小饭馆被强制停业，医院不准收留病人，长安街附近的居民不能用燃气，甚至，上公厕都要实名登记……有评论表示，如今的中国不是中国人民的，所以这不是国庆，而是国殇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 6:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/28/n11616747.md#1" target="_blank">每日三退声明精选（2019/10/27）</a><br></h3>我声明退出贪污成风、腐化成性、欺骗愚弄百姓、破坏社会生产力、独裁傲慢、自大膨胀、践踏法律、破坏法治环境、倒行逆施、封建复辟、蔑视生命、颠倒黑白、邪恶不赦的中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 11:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/27/n11614866.md#1" target="_blank">每日三退声明精选（2019/10/26）</a><br></h3>我今天郑重宣布退出少先队和共青团。这都要归功于我今年去海外留学，看到了真正的新闻，真正的历史。我决定切断和中共这个充满谎言的人权杀手的联系！希望民主早日光复中国大陆！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 11:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/10/26/n11613254.md#1" target="_blank">每日三退声明精选（2019/10/25）</a><br></h3>就允许我化名李海鸥吧。我以前真的被中共骗得很惨。我真的很谢谢大纪元，因为后来翻墙看到的很多民运人士和主张独立的人士很多不讲灭共，也不肯讲反共，甚至还替中共，只有你们大纪元真正把中共和全球左翼的思潮的联系讲清楚了。谢谢你们让我看到中共的邪恶。大彻大悟的我今天在这里下定决心，彻底退出中共党团队，并且支持你们反共的行动。中共和共产邪说正如你们所说，是我们这个时代的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 10:56 AM							</td></tr>
