--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768302.md#1" target="_blank">德媒揭露中共在德如何打压五类华人</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768302.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/dbBw8hjQ2-1024x769-e1578137061606-150x120.jpeg" align ="left"></a>德国主流媒体《法兰克福汇报》近期刊登一篇以“北京的恐惧”为题的文章，揭露了中共如何对付生活在德国的五类华人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 9:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11768450.md#1" target="_blank">德黑兰若报复 川普：将直捣伊朗52个地点</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11768450.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20180430-Trump-EpochTimes-IMG_1211-700x420-150x120.jpg" align ="left"></a>周六（1月4日）下午，美国总统川普（特朗普）发出数则推文，警告德黑兰不要轻举妄动，否则美国将直捣伊朗52个重要地点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768387.md#1" target="_blank">【新闻大破解】台大选港台同心 中共介选难</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled-1-150x120.jpg" align ="left"></a>2020台湾大选进入倒计时，台湾刚刚通过了防范中共渗透的《反渗透法》，中共领导人习近平新年贺词中也未提到台湾。新的一年开始，两岸关系将有怎样的进展？新唐人《新闻大破解》节目为读者解析纷乱的时局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768381.md#1" target="_blank">中共长臂深入美校园 中国学生面临红色恐怖</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768381.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/03/1409091817452520-150x120.jpg" align ="left"></a>中共长臂深入美国校园，华盛顿担心中共借此窃取知识产权，并导致中国学生及学者在美国校园面临“新的红色恐怖”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 7:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768179.md#1" target="_blank">【热点互动】台大选关键时刻 反渗透防变色？</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6c57aa9fedfcc_ttl7dayAji_41a39446e88d8643-150x120.jpg" align ="left"></a>台湾大选在即，日前台湾立法院三读通过旨在防范中共渗透的《反渗透法》，凸显台湾朝野对于防范中共的努力。这次台湾大选引发国际高度关注，外界都认为这是一场关乎台湾未来的选举。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 7:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768186.md#1" target="_blank">【新闻看点】台湾大选谁赢 北京都遇难题</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768186.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/32069c8c4434c9aa16dd970e38fb4200-150x120.jpg" align ="left"></a>台湾大选倒计时，这是一场事关台湾前途命运的抉择。但是对北京来说，无论谁当选都是难题。而这些难题，都是北京对台采用“大棒政策”、一步步推离台湾的结果。用老百姓的话说，脚上的泡——自己走出来的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 7:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768297.md#1" target="_blank">武汉爆不明病毒性肺炎 全球戒备</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768297.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-144529612-150x120.jpg" align ="left"></a>世界卫生组织对湖北省武汉市爆发不明病毒性肺炎表示关注，现正监察情况，并就事件与中国政府联络。而民众之间，与大陆有紧密接触的港澳特区与台湾，已宣布加强防范，堵截病毒流入。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768207.md#1" target="_blank">新加坡现首例武汉肺炎 港府提升应对级别</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768207.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1881582-150x120.jpg" align ="left"></a>1月4日，新加坡发现首名与武汉肺炎疫情有关的可疑病例；当天，港府启动了“严重应变”级别，应对这种来自武汉市的神秘病毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768225.md#1" target="_blank">阴霾袭华北黄淮汾渭 69城发重污染预警</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768225.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/VCG111262611086-600x400-150x120.jpg" align ="left"></a>大陆多地遭新年首轮“霾伏”， 2日至3日，出现大范围PM2.5（细颗粒物）污染。4日至6日，重污染范围继续扩大至华北黄淮汾渭平原等地，69个市启动重污染预警。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:33 AM							</td></tr>
@@ -17,13 +23,7 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767049.md#1" target="_blank">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767049.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-509525684-150x120.jpg" align ="left"></a>被美军无人机击毙的伊朗将军卡西姆·索莱马尼（Qassim Soleimani）被称为美国最邪恶的对手，很多人不知道，这位伊朗政权二号人物的真实身份是恐怖组织头子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11760693.md#1" target="_blank">蒋经国一生反共信念的历程</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11760693.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020010021-150x120.png" align ="left"></a>蒋经国先生是中华民国第6、7任总统，也是国际知名的政治领袖。曾有民调统计，有超过半数的台湾人民认为他是最受到怀念，也是对台湾贡献最大的总统。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767045.md#1" target="_blank">陕西前书记赵正永被审查 通报措辞极严厉</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767045.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/377162-2-600x400-150x120.jpg" align ="left"></a>今天（1月4日），中共全国人大前内务司法委员会副主任委员、陕西省委前书记赵正永“严重违纪违法”被立案审查调查。中共官方通报措辞极严厉，指赵对“中央决策阳奉阴违、培植个人势力、搞团团伙伙”等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767063.md#1" target="_blank">袁斌：2019年以悲剧落幕，2020年以惨剧揭幕</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/33-600x400-1-150x120.jpeg" align ="left"></a>2020年1月1日18时许，江苏省仪征市刘集镇刘集村村民彭在林为报复当地政府强拆而行凶砍人，导致一死二伤。网络舆论把这一事件形容为今年的“开年第一杀”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766814.md#1" target="_blank">楼市趋冷 北京760万元二手房两月降170万</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766814.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/00-beijing-Real-estate-agents-GettyImages-545300826-1-150x120.jpg" align ="left"></a>大陆楼市在2019年趋冷，尤其是一线城市，其中北京二手房价连续数月下跌，一户报价人民币760万元左右的二手房，仅仅过了2个月，房价下降了170万。显示大陆经济下滑对楼市的影响已经逐渐显现出来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 12:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766765.md#1" target="_blank">【拍案惊奇】舌尖上的瘟疫 武汉肺炎与野味</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766765.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6905677394b9b_ttl7dayXor_tn0103-xxx-150x120.jpg" align ="left"></a>2020注定不平凡，新年刚一开始，就发生了好多事件。比如美军无人机空袭巴格达机场，杀死了伊朗革命卫队指挥官苏莱曼尼；台湾黑鹰直升机坠落，造成参谋总长沈一鸣上将等8个人遇难，等等。但是对华人朋友来说，最容易引发恐慌的，则是在武汉爆发的“病毒性肺炎”。通过这个案例，我们会引申谈到两点问题，一是来谈为什么说“野味”可能成为“灰犀牛事件”，第二是在武汉与香港不完全相.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 12:17 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766872.md#1" target="_blank">武汉肺炎疫情扩大 大陆多地又爆发流感</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/VCG111184914335-600x400-150x120.jpg" align ="left"></a>随着武汉爆发不明肺炎疫情、扬州大学出现肺结核疫情及兰州布鲁氏菌病例增加，进入2020年，大陆多个城市亦爆发流感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 11:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766842.md#1" target="_blank">新年伊始茅台连跌两日 市值蒸发1300亿</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766842.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/6eccc5d8f7adc3386d7e76ede09b1a07-150x120.jpg" align ="left"></a>在大陆被称为“股王”的贵州茅台，2020年伊始连续两个交易日大跌，市值共计蒸发1300多亿元（人民币，下同）。贵州茅台最新发布的2019年营收和利润都大幅减少，第四季度利润可能出现负增长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 11:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766821.md#1" target="_blank">美伊冲突 专家：北京陷内困无瑕顾及伊朗</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766821.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180494181-1-150x120.jpg" align ="left"></a>北京与德黑兰的外交关系日趋温和，美国与伊朗冲突升级，是否会影响美中贸易谈判？专家认为答案是否定的，因为目前的经济问题已使中共焦头烂额，无瑕顾及其它事务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 10:33 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11755421.md#1" target="_blank">2020年中国十个科技品牌在海外恐碰壁</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11755421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/060fab95ddbb0c11d145f09138cad61e-600x400-150x120.jpg" align ="left"></a>2019年即将过去。这一年发生了一系列国际大事，令中国品牌的国际地位随之下降及失去信任。如华为、旷视、商汤等科技公司引发的安全隐忧，全球对中国品牌的印象变差。大纪元在此为您盘点2020年在海外市场形势不妙的十大中国品牌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 9:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11768659.md#1" target="_blank">每日三退声明精选（2020/01/04）</a><br></h3>这里是被中共统治的中国。这个党告诉世人，他是真理的惟一标准，他是中国的救星，人民的领导者...... 但是他不是伟大的上帝，而是一个以一个个谎言荼毒像你一像天真可爱的孩子的骗子，以一场场血腥暴力摧毁每一个中国人的生命的匪帮。 孩子，对不起，我们没能让你迁离这片多灾多难的土地，没能让你在理想的环境下生活。我们十多年前也没看清中共邪恶的一面，加入了中共党团队，这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 11:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767938.md#1" target="_blank">广西南宁一幼儿园老师虐童</a><br></h3>1月3日，网络上传出一段广西南宁市一幼儿园教师虐童视频，引起外界关注。
 
 据梨视频消息，涉事幼儿园为南宁市安吉大道西津村西津幼儿园，在午休时间，一幼师走到一名小孩的床前，用力拉扯他的手臂，又将他拖落地面；她之后又对另一名小孩发脾气，将对方的枕头扔到角落。
