--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/lduuv275/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774999.md#1">延安男子被副乡长绑走 妻子苦寻21年无果</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774898.md#1">台湾首投族增118万人 蓝绿齐催青年投票</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774966.md#1">南海争端再起 印尼动员渔民对抗中国船只</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774881.md#1">大陆ETC乱象 1公里收多少钱？网民炸锅</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774302.md#1">武汉肺炎持续扩散 香港全城抢购口罩</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774249.md#1">武汉肺炎疫情蔓延 中共仍禁寄运口罩至香港</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774228.md#1">武汉男子推特批中共 遭判刑1年3个月</a><br>
-<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11773417.md#1">【独家】专访郑文杰：屈服中共将后悔一生（一）</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774871.md#1">跑分平台揭6款作弊手机皆大陆产 华为占5款</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774414.md#1">新年香港警方滥捕 玩失踪 被捕者家属苦候</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11773721.md#1">讽刺中共暴政 漫画家获奥斯卡中国人权奖</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,432,529 人
+- 共 349,433,109 人
 ```
 </strong>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
