--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11749624.md#1" target="_blank">香港圣诞催泪弹肆虐 检测报告揭政府谎言</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11749624.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240929222478-150x120.jpg" align ="left"></a>香港反送中运动以来，警方的催泪弹在香港各区肆虐，连圣诞节也不例外。最新的检测报告显示，催泪弹CS残留物驻留时间长，即使多次洗涤后残留量也足以致皮肤过敏，揭政府此前谎言。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/26/n11747657.md#1" target="_blank">被质疑耽误周杰伦出专辑 昆凌高EQ回应</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/26/n11747657.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1906252259561487-150x120.jpg" align ="left"></a>与大14岁的周杰伦育有一对子女的昆凌，最近在大陆真人秀中遭网民质疑她太爱玩，让周杰伦也被“传染”到处旅游，无法正常出专辑。对此，昆凌高EQ回应，说明周杰伦这样做可以四处找灵感。不过，她也表示：“他（周杰伦）确实该出专辑了！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/26/n11747020.md#1" target="_blank">中共无孔不入  台学者：反渗透法绝对必要</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/26/n11747020.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/16ae24f9ef5840a5c41034d202152fe2-150x120.jpg" align ="left"></a>民进党团预计在本月31日，于立法院三读通过“反渗透法”，学者认为，台湾遭中共无孔不入的入侵，“台湾不应让中共渗透变成合法的情况，绝对有立该法的必要性。”专家也说，随着“反渗透法”即将进入三读的程序，许多政治人物纷纷对此表态，“这就好像是照妖镜，把许多人的红色背景照出来，让老百姓加以检视他们的立场。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 4:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11759620.md#1" target="_blank">中央美院教授被举报性骚扰多名女生</a><br></h3>近日，多位中央美术学院的女学生通过自媒体爆料，她们遭到该校教授姚舜熙的长期性骚扰。但该校经过长达半年的调查，至今未作出公开回应，只是对姚进行了内部处理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/26/n11747230.md#1" target="_blank">【新闻看点】感激——美国人的年度关键词</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/26/n11747230.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/01/401014827628-150x120.jpg" align ="left"></a>美国一家机构最近对1000多人调查，想了解人们对过去一年和目前的生活感受。结果高达70%的受访者选择了“感激（grateful）”，认为美国经济表现良好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 4:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11756555.md#1" target="_blank">山西一在建隧道坍塌 5人死亡1人被困</a><br></h3>12月30日，山西晋城市一施工隧道发生断面塌方，塌方量约200立方米。有6人被困，截止今（31日）早9时11分，证实有5人死亡，1人受困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754591.md#1" target="_blank">每日三退声明精选（2019/12/29）</a><br></h3>太坑人了，家被拆，无处申冤！为了生活选择工作还被抓进监狱，没有房可住，微薄的退休金还是最低的双轨制，都不敢得病，怕死不起！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 3:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11752699.md#1" target="_blank">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br></h3>北京市朝阳区民航总医院女医生杨文24日遭病人家属孙文斌用刀割喉死亡。陆媒近日披露其被杀的细节：孙用刀刺中她颈部后，再多次“拉锯式”切割，将她的颈部肌肉及气管锯断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 6:43 PM							</td></tr>
