--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -43,7 +43,7 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774999.md#1">延安男子被副乡长绑走 妻子苦寻21年无果</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774898.md#1">台湾首投族增118万人 蓝绿齐催青年投票</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775622.md#1">十天内第二起 中国男子闯佛州海军禁区被捕</a><br>
-<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775492.md#1">遇资本寒冬 2019陆336新创公司关停</a><br>
+<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775492.md#1">遭遇资本寒冬 2019大陆336家新创公司关停</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774897.md#1">跑官买官卖官 广西防城港原公安局长被双开</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775427.md#1">加州保安挺港 遭小粉红疯狂“国骂”并殴打</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775337.md#1">弹劾程序 参院共和党免作证提案获过半支持</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,433,109 人
+- 共 349,434,866 人
 ```
 </strong>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
